<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:text="@string/logIn"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginTop="2dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:layout_margin="0dp"
            android:src="@mipmap/theme_pic"
            android:contentDescription="@string/contentDesc"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/eMail"
            android:layout_margin="10dp"
            android:id="@+id/eMailLogIn"
            android:textSize="30sp"
            android:textColorHint="@color/colorText"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:textColorHint="@color/colorText"
            android:hint="@string/pwd"
            android:id="@+id/pwdLogIn"
            android:textSize="30sp"
            android:textAlignment="textEnd"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/colorButton"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/newUser"
            android:text="@string/newUserButton"
            android:layout_height="match_parent" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/colorButton"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/connect"
            android:text="@string/connection"
            android:layout_height="match_parent" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:background="@color/colorButton"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/forgotPwdButton"
            android:id="@+id/forgotPwd"
            android:layout_height="match_parent" />

    </LinearLayout>
</LinearLayout>